SERVER-26022 collMod should copy ViewDefinition before modifying